# LessonAI

./: CLAUDE.md  PRD-ComicBookGenerator.md  README.md  app.py  implementation_plan.md  main.py  memory.md  personagens.md  prompt.md  pyproject.toml  tasks.md  test_results.txt  test_results_utf8.txt
config/: themes.json
references/: Formatação-Marvel-DC.txt  MASTER-PROMPT.txt  PROMPT-—-STORY-ENGINE-(GERADOR-DE-HISTÓRIAS).txt  Prompt-de-ARTE-FINAL.txt  Prompt-de-ARTE.txt  Prompt-de-CORES.txt  Prompt-de-DIREÇÃO-CINEMATOGRÁFICA-DOS-QUADROS.txt  Prompt-de-PERSONAGENS-CONSISTENTES.txt  Story-Engine-Prompt.txt  tema.txt
src/agents/: editorial.py
src/config/: image_config.py  managers.py  master_spec_v58.json
src/pipeline/: balloon_presets.py  composer.py  exporter.py  image_engine.py  prompt_builder.py  reference_sheet_generator.py  validator.py  vision_engine.py
src/prompts/: loader.py
src/search/: web_search.py
src/ui/: sidebar.py
src/utils/: debug_logger.py
tests/: test_composer.py  test_editorial.py  test_managers.py  test_prompt_builder.py
