[project]
name = "lessonai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.5.9",
    "anthropic>=0.84.0",
    "drawsvg>=2.4.1",
    "duckduckgo-search>=8.1.1",
    "google-generativeai>=0.8.6",
    "litellm>=1.82.1",
    "openai>=2.26.0",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.2",
    "replicate>=1.0.7",
    "reportlab>=4.4.10",
    "streamlit>=1.55.0",
    "svglib>=1.6.0",
    "tavily-python>=0.7.23",
]
